src/z80asm/z80asm2/t/20-preproc/expected/defvars_23.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_23.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/defvars_23.asm...
t/20-preproc/input/defvars_23.asm:3:17: error: Expected ',' or end of line in DEFVARS directive
        var1 DS.B 1 var2 DS.B 1 var3 DS.B 1
                    ^
# file: t/20-preproc/input/defvars_23.asm
Identifier	"DEFC"	3:5	keyword=DEFC 
Identifier	"var1"	3:10	
EQ	"="	3:15	
Integer	"0"	3:17	int_value=0 
EndOfLine	"\n"	3:18	
Define constant: var1 = 0
EndOfLine	"\n"	5:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
symbol	__FLOAT_GENMATH__	1	(defined at )
symbol	var1	0	(defined at t/20-preproc/input/defvars_23.asm:3:10)
